# sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
sentinel/: __init__.py  cli.py  core.py
sentinel/modules/: __init__.py  config.py  container.py  probe.py
sentinel/report/: __init__.py  html.py  sarif.py  terminal.py
sentinel/rules/: __init__.py  registry.py  rules.yaml
tests/: conftest.py
tests/fixtures/: configs.py
tests/integration/: test_cli.py  test_probe.py
tests/unit/: test_config.py  test_core.py  test_report.py  test_rules.py
